--- a/acoms/paginas/boletim/boletim.html
+++ b/acoms/paginas/boletim/boletim.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-	<link rel="icon" href="/img/logomarca.png">
+  <link rel="icon" href="/img/logomarca.png">
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boletim Escolar</title>
 
-  <link rel="stylesheet" href="/paginas/evento/evento-navbar.css">
-  <link rel="stylesheet" href="/paginas/boletim/boletim.css">
-  <link rel="stylesheet" href="/paginas/boletim/boletimdados.css">
+  <link rel="stylesheet" href="/paginas/navbar/navbar.css">
+  <link rel="stylesheet" href="/paginas/navbar/telafull.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css.map">
@@ -19,12 +19,15 @@
   <link rel="stylesheet" href="/bootstrap/assets/brand/bootstrap-logo-white.svg">
   <link rel="stylesheet" href="/bootstrap/assets/brand/bootstrap-logo.svg">
 
+  <link rel="stylesheet" href="/paginas/navbar/style.css">
+
 </head>
 
 <body id="body">
   <script src="/integrationFile/waitLoad.js"></script>
 
-  <header>
+
+  <header id="cabeca">
     <img src="/img/logofull.png" alt="brand" id="logofull">
     <div class="menu">
       <div class="btn">
@@ -32,10 +35,10 @@
       </div>
       <a href="/paginas/aluno/aluno.html">INICIO</a>
       <a href="/paginas/boletim/boletim.html">BOLETIM</a>
-      <a href="/paginas/comunicados/comunicados.html">COMUNICADOS</a>
-      <a href="/paginas/calendario/calender.html">CALENDÁRIO</a>
+      <a href="/paginas/comunicados/comunicadosaluno.html">COMUNICADOS</a>
+      <a href="/paginas/calendario/calendario.html">CALENDÁRIO</a>
       <a href="/paginas/evento/evento.html">EVENTOS</a>
-      <a href="/paginas/login/login_aluno/loginaluno.html">SAIR</a>
+      <a class="logout" href="#">SAIR</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -49,17 +52,15 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle"
-                width="150">
-              <div class="mt-3">
-                <h4>Roberto</h4>
+              <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle" width="150">
+              <div class="mt-3" style="font-size: 16px;">
+                <h4 style="font-size: 24px;">Roberto</h4>
                 <b class="text-secondary mb-1" font="black">Aluno</b> <br>
                 <b class="text-secondary mb-1" font="black">Vinculado ao responsável: Silvio</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <p class="text-muted font-size-sm">RM: 12345</p>
                 <p class="text-muted font-size-sm">Série: 3° ano</p>
-                <button class="btn btn-primary">Editar Perfil</button>
-                <button formaction="/paginas/boletim/boletim.html" class="btn btn-outline-primary">Ver Boletim</button>
+                <button class="btn btn-primary" style="font-size: 16px; padding: 5px 13px 5px 13px;" onclick="location.href='/paginas/aluno/alunoperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
@@ -70,25 +71,22 @@
         <div class="mb">
 
           <div class="card mb-3" id="div-informacao">
-            <style>
-              html {
-                font-family: arial;
-                font-size: 18px;
-              }
 
+            <style>
               h2 {
-                margin-left: 39%;
+                margin-left: 10%;
+                text-align: center;
               }
 
               td {
                 border: 2px solid rgb(0, 0, 0);
-                padding: 15px;
+                padding: 19px;
               }
 
               thead {
                 font-weight: bold;
                 text-align: center;
-                background: rgb(230, 9, 9);
+                background: rgb(255, 50, 50);
                 color: white;
               }
 
@@ -106,11 +104,10 @@
               }
             </style>
 
-            <head>
-              <h2> BOLETIM ATUAL: </h2>
-            </head>
-
             <body>
+
+              <h2> BOLETIM ATUAL </h2>
+
               <table>
                 <thead>
                   <tr>
@@ -167,14 +164,9 @@
               </table>
             </body>
 
-
           </div>
 
-
-
-
         </div>
-
 
       </div>
     </div>
