--- a/acoms/paginas/cadastro/cadastrar_coordenador/cadastrar_coordenador.html
+++ b/acoms/paginas/cadastro/cadastrar_coordenador/cadastrar_coordenador.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
-  <link rel="icon" href="/img/logomarca.png">
-
+<head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Área do aluno</title>
+  <title>Área da escola</title>
 
-  <link rel="stylesheet" href="/paginas/navbar/telabotao.css">
+  <link rel="stylesheet" href="/paginas/cadastro/cadastrar_coordenador/cadastrar_coordenador.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -21,10 +19,11 @@
 
   <link rel="stylesheet" href="/paginas/navbar/style.css">
 
+
 </head>
 
 <body id="body">
-  <script src="/integrationFile/waitLoad.js"></script>
+
 
   <header id="cabeca">
     <img src="/img/logofull.png" alt="brand" id="logofull">
@@ -32,12 +31,14 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/aluno/aluno.html">INICIO</a>
-      <a href="/paginas/boletim/boletim.html">BOLETIM</a>
-      <a href="/paginas/comunicados/comunicadosaluno.html">COMUNICADOS</a>
-      <a href="/paginas/calendario/calendario.html">CALENDÁRIO</a>
-      <a href="/paginas/evento/evento.html">EVENTOS</a>
-      <a class="logout" href="#">SAIR</a>
+      <a href="/paginas/cadastro/cadastrar_aluno/cadastrar_aluno.html" style="text-align: center;">Cadastrar Alunos</a>
+      <a href="/paginas/cadastro/cadastrar_responsavel/cadastrar_responsavel.html" style="text-align: center;">Cadastrar
+        Responsável</a>
+      <a href="/paginas/cadastro/cadastrar_professor/cadastrar_professor.html" style="text-align: center;">Cadastrar
+        professor</a>
+      <a href="/paginas/cadastro/cadastrar_coordenador/cadastrar_coordenador.html" style="text-align: center;">Cadastrar
+        coordenação</a>
+      <a href="/paginas/login/login_escola/loginescola.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -51,49 +52,26 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle"
-                width="150">
-              <div class="mt-3" style="font-size: 16px;">
-                <h4 style="font-size: 24px;" class="studentName">Roberto</h4>
-                <b class="text-secondary mb-1" font="black">Aluno</b> <br>
-                <b class="text-secondary mb-1" font="black">Vinculado ao responsável: <span class="parentName"></span></b>
-                <p class="text-muted font-size-sm schoolName">ETEC Prof. Armando josé Farinazzo</p>
-                <p class="text-muted font-size-sm">RM: <span class="studentRm"></span></p>
-                <p class="text-muted font-size-sm">Série: 3° ano</p>
-                <button class="btn btn-primary" style="font-size: 16px; padding: 5px 13px 5px 13px;" onclick="location.href='/paginas/aluno/alunoperfil.html'">Perfil</button>
+              <img src="/paginas/landingpage/img/etec.jpg" alt="Admin" class="rounded-circle" width="150">
+              <div class="mt-3">
+                <h4>ETEC Fernandópolis</h4>
+                <b class="text-secondary mb-1" font="black">Escola</b>
+                <p class="text-muted font-size-sm">Operado pela gestão escolar</p>
+                <button class="btn btn-primary"
+                  onclick="location.href='/paginas/escola/escolaperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <div class="col-md-8">
 
-        <div class="mb">
+        <br>
+        <h1>CADASTRO DE COORDENAÇÃO:</h1>
+        <br>
+        <!--Colocar dentro do for:each-->
 
-          <div class="card mb-3" id="div-informacao">
-
-            <div class="d-flex text-muted pt-3">
-
-              <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
-                  dy=".3em">32x32</text>
-              </svg>
-
-              <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
-                <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark" style="font-size: 25px;">Boletim</strong>
-                  <div class="profile-image"><img class="rounded-circle">
-                    <button class="btn btn-primary" onclick="location.href='/paginas/boletim/boletim.html'">Visualizar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
 
         <div class="mb">
 
@@ -111,18 +89,14 @@
 
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark" style="font-size: 25px;">Calendário</strong>
-                  <div class="profile-image"><img class="rounded-circle">
-                    <button class="btn btn-primary" onclick="location.href='/paginas/calendario/calendario.html'">Visualizar</button>
-                  </div>
+                  <strong class="text-gray-dark">Valdete</strong>
+                  <button class="btn btn-primary" id="visualizar"
+                    onclick="location.href='/paginas/aluno/aluno.html'">Desativar</button>
                 </div>
+                <span class="d-block">Diretora</span>
               </div>
             </div>
           </div>
-
-        </div>
-
-        <div class="mb">
 
           <div class="card mb-3" id="div-informacao">
 
@@ -138,25 +112,66 @@
 
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark" style="font-size: 25px;">Eventos</strong>
-                  <div class="profile-image"><img class="rounded-circle">
-                    <button class="btn btn-primary" onclick="location.href='/paginas/evento/evento.html'">Visualizar</button>
-                  </div>
+                  <strong class="text-gray-dark">João Otávio</strong>
+                  <button class="btn btn-primary" id="visualizar"
+                    onclick="location.href='/paginas/aluno/aluno.html'">Desativar</button>
                 </div>
+                <span class="d-block">Coordenador</span>
               </div>
+
+
+
+            </div>
+          </div>
+
+          <div class="card mb-3" id="div-informacao">
+
+            <div class="d-flex text-muted pt-3">
+
+              <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
+                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
+                preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
+                  dy=".3em">32x32</text>
+              </svg>
+
+              <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                  <strong class="text-gray-dark">Paloma</strong>
+                  <button class="btn btn-primary" id="visualizar"
+                    onclick="location.href='/paginas/aluno/aluno.html'">Desativar</button>
+                </div>
+                <span class="d-block">Orientadora</span>
+              </div>
+
+
+
             </div>
           </div>
 
         </div>
+
+
+
+
 
       </div>
     </div>
+
+
+
+    <!--fim for:each-->
+
+    <div class="button_plus"></div>
+
   </div>
+
+  </div>
+
   <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
   <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
-  
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="/integrationFile/integration.js"></script>
+
 </body>
 
 </html>
