--- a/acoms/paginas/landingpage/landingpage.html
+++ b/acoms/paginas/landingpage/landingpage.html
@@ -24,15 +24,9 @@
 
 <body>
   <script src="/integrationFile/waitLoad.js"></script>
-  <!-- <a href="">aaaa</a> -->
-
-  <!-- <h1>teste</h1> -->
-
-  <!-- <h2>teste2</h2> -->
-
 
   <header>
-    <img src="/paginas/landingpage/img/logofull.png" alt="brand" id="logofull">
+    <img src="/img/logofull.png" alt="brand" id="logofull">
     <div class="menu">
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
