--- a/acoms/paginas/turma/lista-alunos/listaalunos.html
+++ b/acoms/paginas/turma/lista-alunos/listaalunos.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área do responsável</title>
 
-  <link rel="stylesheet" href="/paginas/navbar/telabotao.css">
+  <link rel="stylesheet" href="/paginas/navbar/telabotaovisualizar.css">
   <link rel="stylesheet" href="/paginas/navbar/navbar.css">
 
   <link rel="stylesheet" href="/bootstrap/assets/dist/css/bootstrap.min.css">
@@ -31,12 +31,10 @@
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
-      <a href="/paginas/professor/professor.html">Inicio</a>
-      <a href="/paginas/comunicacao_coordenacao/comunicacaocoordenacaoprofessor.html">Coordenação</a>
-      <a href="/paginas/cadastro/cadastrar_evento/cadastrarevento.html">Criar Evento</a>
-      <a href="/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html">Presença</a>
-      <a href="/paginas/cadastro/cadastrar_nota/cadastrarnota.html">Notas</a>
-      <a href="/paginas/login/login_professor/loginprofessor.html">Sair</a>
+      <a href="/paginas/coordenador/coordenador.html">Inicio</a>
+      <a href="/paginas/turma/turma.html">Turmas</a>
+      <a href="/paginas/lista-professores/listaprofessores.html">Professores</a>
+      <a href="/paginas/login/login_coordenacao/logincoordenador.html">Sair</a>
     </div>
     <div class="btn">
       <i class="fas fa-bars menu-btn"></i>
@@ -50,14 +48,13 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <img src="https://www.bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle"
-                width="150">
+              <img src="/paginas/coordenador/coordenador.png" alt="Admin" class="rounded-circle" width="150">
               <div class="mt-3">
-                <h4>Marcos Antonio</h4>
-                <b class="text-secondary mb-1" font="black">Professor</b>
+                <h4>João Otávio</h4>
+                <b class="text-secondary mb-1" font="black">Coordenador</b>
                 <p class="text-muted font-size-sm">ETEC Prof. Armando josé Farinazzo</p>
                 <button class="btn btn-primary"
-                  onclick="location.href='/paginas/professor/professorperfil.html'">Perfil</button>
+                  onclick="location.href='/paginas/coordenador/coordenadorperfil.html'">Perfil</button>
               </div>
             </div>
           </div>
@@ -65,9 +62,6 @@
       </div>
 
       <div class="col-md-8">
-
-
-        <!--Colocar dentro do for:each-->
 
         <div class="mb">
 
@@ -85,30 +79,47 @@
 
               <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                  <strong class="text-gray-dark" style="font-size: 25px;">3° Infonet</strong>
-                  <div class="profile-image"><img class="rounded-circle">
-                    <button class="btn btn-primary"
-                      onclick="location.href='/paginas/cadastro/cadastrar_presenca/cadastrarpresenca.html'">Presença</button>
-                    <button class="btn btn-primary"
-                      onclick="location.href='/paginas/cadastro/cadastrar_nota/cadastrarnota.html'">Nota</button>
-                  </div>
+                  <strong class="text-gray-dark">Roberto</strong>
+                  <button class="btn btn-primary" id="visualizar"
+                    onclick="location.href='/paginas/turma/lista-alunos/informacao-aluno/informacaoaluno.html'">Visualizar</button>
                 </div>
+                <span class="d-block">Série: 9° ano - Escola: ETEC Fernandópolis</span>
               </div>
             </div>
           </div>
+
+          <div class="card mb-3" id="div-informacao">
+
+            <div class="d-flex text-muted pt-3">
+
+              <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32"
+                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32"
+                preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title>Placeholder</title>
+                <rect width="100%" height="100%" fill="#007bff" /><text x="50%" y="50%" fill="#007bff"
+                  dy=".3em">32x32</text>
+              </svg>
+
+              <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                <div class="d-flex justify-content-between">
+                  <strong class="text-gray-dark">Maria</strong>
+                  <button class="btn btn-primary" id="visualizar" onclick="location.href=''">Visualizar</button>
+                </div>
+                <span class="d-block">Série: 1° ano - Escola: ETEC Fernandópolis</span>
+              </div>
+            </div>
+          </div>
+
         </div>
-
-
-        <!--fim for:each-->
-
-
 
       </div>
 
     </div>
 
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
+  </div>
+
+  <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js">
+  <link rel="stylesheet" href="botstrap/assets/dist/js/bootstrap.bundle.min.js.map">
 
 </body>
 
